Fixed missing h5p-wrong background color in css/dragquestion.css. Fixed small bug causing error when content included in Interactive Book papi Jo

--- a/css/dragquestion.css
+++ b/css/dragquestion.css
@@ -128,7 +128,7 @@ html.h5p-iframe .h5p-container.h5p-dragquestion.h5p-semi-fullscreen {
   background: #9dd8bb;
 }
 
-.h5p-dragquestion .h5p-dropped.h5p-	 {
+.h5p-dragquestion .h5p-dropped.h5p-wrong {
   border: 0.1em solid #f7d0d0;
   color: #b71c1c;
   background: #f7d0d0;
